@@ -8,7 +8,7 @@
       docs@gnome.org (GDP)
     </maintainer>
     <title>
-      Disk Mounter Applet V2.1
+      Disk Mounter Applet
     </title>    
     <date>
       2004-02-09
