@@ -2,9 +2,9 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "2.5.4">
-  <!ENTITY manrevision "2.1">
-  <!ENTITY date "February 2004">
+  <!ENTITY appversion "2.8">
+  <!ENTITY manrevision "2.8">
+  <!ENTITY date "September 2004">
   <!ENTITY app "<application>Disk Mounter</application>">
   <!ENTITY appname "Disk Mounter">
 ]>
@@ -20,7 +20,7 @@
 <!-- please do not change the id; for translations, change lang to -->
 <!-- appropriate code -->
   <articleinfo> 
-    <title>&appname; Manual V&manrevision;</title>       
+    <title>&appname; Manual</title>       
     <copyright>
       <year>2004</year>
       <holder>Sun Microsystems</holder>
@@ -89,8 +89,16 @@
 
     <revhistory>
       <revision> 
-	<revnumber>&appname; Applet Manual V&manrevision;</revnumber> 
+	<revnumber>Version &manrevision;</revnumber> 
 	<date>&date;</date> 
+	<revdescription> 
+          <para role="author">Sun GNOME Documentation Team</para>
+          <para role="publisher">GNOME Documentation Project</para>
+	</revdescription> 
+      </revision> 
+      <revision> 
+	<revnumber>&appname; Applet Manual V2.1</revnumber> 
+	<date>February 2004</date> 
 	<revdescription> 
           <para role="author">Sun GNOME Documentation Team</para>
           <para role="publisher">GNOME Documentation Project</para>
@@ -161,12 +169,13 @@
     </para>
 
     <sect2 id="drivemount-intro-add">
-      <title>To Add &appname; to a Panel</title>
-      <para>
-        To add &app; to a panel, right-click on the panel, then choose <menuchoice><guimenu>Add to Panel</guimenu><guisubmenu>Utility</guisubmenu><guimenuitem>&appname;</guimenuitem></menuchoice>. 
-      </para>
+     <title>To Add &appname; to a Panel</title>
+     <para>To add &app; to a panel, right-click on the panel, then choose
+     <guimenuitem>Add to Panel</guimenuitem>.  Select &app; in the
+     <application>Add to the panel</application> dialog, then click
+     <guibutton>OK</guibutton>.</para>
     </sect2>
-
+ 
     <sect2 id="drivemount-intro-mount">
       <title>Manually Mounting and Unmounting File Systems</title>
       <para>
