@@ -1,3 +1,9 @@
+2004-09-10  Shaun McCance  <shaunm@gnome.org>
+
+	* help/C/drivemount-C.omf:
+	* help/C/drivemount.xml:
+	- Updates for 2.8, thanks to Christian Kellner
+
 2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Remove references to screen-exec.
